[package]
name = "typed-transaction-macros"
version = "0.2.2"
authors = ["Dean Little <@deanmlittle>"]
description = "Typed transaction macros"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true
name = "typed_transaction_macros"

[dependencies]
syn = { version = "2.0.77", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0.86"
sha2 = "0.10.8"
borsh = "0.10.3"
heck = "0.5.0"